@@ -1,7 +1,7 @@
 ---
 project.description: Details about the underlying remoting module for Akka Cluster.
 ---
-# Artery Remoting
+# Remoting
 
 @@@ note
 
@@ -11,8 +11,8 @@ other internally.
 When building an Akka application, you would usually not use the Remoting concepts
 directly, but instead use the more high-level
 @ref[Akka Cluster](index-cluster.md) utilities or technology-agnostic protocols
-such as [HTTP](https://doc.akka.io/docs/akka-http/current/),
-[gRPC](https://doc.akka.io/docs/akka-grpc/current/) etc.
+such as [HTTP](https://doc.akka.io/libraries/akka-http/current/),
+[gRPC](https://doc.akka.io/libraries/akka-grpc/current/) etc.
 
 @@@
 
@@ -20,7 +20,15 @@ If migrating from classic remoting see @ref:[what's new in Artery](#what-is-new-
 
 ## Dependency
 
-To use Artery Remoting, you must add the following dependency in your project:
+The Akka dependencies are available from Akka's library repository. To access them there, you need to configure the URL for this repository.
+
+@@repository [sbt,Maven,Gradle] {
+id="akka-repository"
+name="Akka library repository"
+url="https://repo.akka.io/maven"
+}
+
+To use Remoting, you must add the following dependency in your project:
 
 @@dependency[sbt,Maven,Gradle] {
   bomGroup=com.typesafe.akka bomArtifact=akka-bom_$scala.binary.version$ bomVersionSymbols=AkkaVersion
@@ -42,6 +50,12 @@ The Aeron dependency needs to be explicitly added if using the `aeron-udp` trans
   artifact2=aeron-client
   version2="$aeron_version$"
 }
+
+@@@ note { title="Java 17" }
+
+When using Aeron with Java 17 you have to add JVM flag `--add-opens=java.base/sun.nio.ch=ALL-UNNAMED`.
+
+@@@
 
 ## Configuration
 
@@ -90,13 +104,6 @@ All settings are described in @ref:[Remote Configuration](#remote-configuration-
 
 We recommend @ref:[Akka Cluster](cluster-usage.md) over using remoting directly. As remoting is the
 underlying module that allows for Cluster, it is still useful to understand details about it though.
-
-@@@ note
-
-This page describes the remoting subsystem, codenamed *Artery* that has replaced the
-@ref:[classic remoting implementation](remoting.md).
-
-@@@
 
 Remoting enables Actor systems on different hosts or JVMs to communicate with each other. By enabling remoting
 the system will start listening on a provided network address and also gains the ability to connect to other
@@ -148,7 +155,7 @@ officially supported. If you're on a Big Endian processor, such as Sparc, it is 
 
 ## Migrating from classic remoting
 
-See @ref:[migrating from classic remoting](project/migration-guide-2.5.x-2.6.x.md#classic-to-artery)
+See [migrating from classic remoting](https://doc.akka.io/libraries/akka-core/2.6/project/migration-guide-2.5.x-2.6.x.html#classic-to-artery)
 
 ## Canonical address
 
@@ -255,198 +262,12 @@ be delivered just fine.
 
 @@@
 
+<a id="remote-tls"></a>
 ## Remote Security
 
 An @apidoc[akka.actor.ActorSystem] should not be exposed via Akka Remote (Artery) over plain Aeron/UDP or TCP to an untrusted
 network (e.g. Internet). It should be protected by network security, such as a firewall. If that is not considered
-as enough protection @ref:[TLS with mutual authentication](#remote-tls) should be enabled.
-
-Best practice is that Akka remoting nodes should only be accessible from the adjacent network. Note that if TLS is
-enabled with mutual authentication there is still a risk that an attacker can gain access to a valid certificate by
-compromising any node with certificates issued by the same internal PKI tree.
-
-By default, @ref[Java serialization](serialization.md#java-serialization) is disabled in Akka.
-That is also security best-practice because of its multiple
-[known attack surfaces](https://community.microfocus.com/cyberres/fortify/f/fortify-discussions/317555/the-perils-of-java-deserialization).
-
-<a id="remote-tls"></a>
-### Configuring SSL/TLS for Akka Remoting
-
-In addition to what is described here, read the blog post about [Securing Akka cluster communication in Kubernetes](https://akka.io/blog/article/2021/10/27/akka-cluster-mtls).
-
-SSL can be used as the remote transport by using the `tls-tcp` transport:
-
-```
-akka.remote.artery {
-  transport = tls-tcp
-}
-```
-
-Next the actual SSL/TLS parameters have to be configured:
-
-```
-akka.remote.artery {
-  transport = tls-tcp
-
-  ssl.config-ssl-engine {
-    key-store = "/example/path/to/mykeystore.jks"
-    trust-store = "/example/path/to/mytruststore.jks"
-
-    key-store-password = ${SSL_KEY_STORE_PASSWORD}
-    key-password = ${SSL_KEY_PASSWORD}
-    trust-store-password = ${SSL_TRUST_STORE_PASSWORD}
-
-    protocol = "TLSv1.2"
-
-    enabled-algorithms = [TLS_DHE_RSA_WITH_AES_128_GCM_SHA256]
-  }
-}
-```
-
-Always use [substitution from environment variables](https://github.com/lightbend/config#optional-system-or-env-variable-overrides)
-for passwords. Don't define real passwords in config files.
-
-According to [RFC 7525](https://www.rfc-editor.org/rfc/rfc7525.html) the recommended algorithms to use with TLS 1.2 (as of writing this document) are:
-
- * TLS_DHE_RSA_WITH_AES_128_GCM_SHA256
- * TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
- * TLS_DHE_RSA_WITH_AES_256_GCM_SHA384
- * TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
-
-You should always check the latest information about security and algorithm recommendations though before you configure your system.
-
-Creating and working with keystores and certificates is well documented in the
-[Generating X.509 Certificates](https://lightbend.github.io/ssl-config/CertificateGeneration.html#using-keytool)
-section of Lightbend's SSL-Config library.
-
-Since an Akka remoting is inherently @ref:[peer-to-peer](general/remoting.md#symmetric-communication) both the key-store as well as trust-store
-need to be configured on each remoting node participating in the cluster.
-
-The official [Java Secure Socket Extension documentation](https://docs.oracle.com/javase/8/docs/technotes/guides/security/jsse/JSSERefGuide.html)
-as well as the [Oracle documentation on creating KeyStore and TrustStores](https://docs.oracle.com/cd/E19509-01/820-3503/6nf1il6er/index.html)
-are both great resources to research when setting up security on the JVM. Please consult those resources when troubleshooting
-and configuring SSL.
-
-Mutual authentication between TLS peers is enabled by default. Mutual authentication means that the the passive side
-(the TLS server side) of a connection will also request and verify a certificate from the connecting peer.
-Without this mode only the client side is requesting and verifying certificates. While Akka is a peer-to-peer
-technology, each connection between nodes starts out from one side (the "client") towards the other (the "server").
-
-Note that if TLS is enabled with mutual authentication there is still a risk that an attacker can gain access to a
-valid certificate by compromising any node with certificates issued by the same internal PKI tree.
-
-It's recommended that you enable hostname verification with
-`akka.remote.artery.ssl.config-ssl-engine.hostname-verification=on`.
-When enabled it will verify that the destination hostname matches the hostname in the peer's certificate.
-
-In deployments where hostnames are dynamic and not known up front it can make sense to leave the hostname verification off.
-
-You have a few choices how to set up certificates and hostname verification:
-
-* Have a single set of keys and a single certificate for all nodes and *disable* hostname checking
-    * The single set of keys and the single certificate is distributed to all nodes. The certificate can
-      be self-signed as it is distributed both as a certificate for authentication but also as the trusted certificate.
-    * If the keys/certificate are lost, someone else can connect to your cluster.
-    * Adding nodes to the cluster is simple as the key material can be deployed / distributed to the new node.
-* Have a single set of keys and a single certificate for all nodes that contains all of the host names and *enable*
-  hostname checking.
-    * This means that only the hosts mentioned in the certificate can connect to the cluster.
-    * It cannot be checked, though, if the node you talk to is actually the node it is supposed to be (or if it is one
-      of the other nodes). This seems like a minor restriction as you'll have to trust all cluster nodes the same in an
-      Akka cluster anyway.
-    * The certificate can be self-signed in which case the same single certificate is distributed and trusted on all
-      nodes (but see the next bullet)
-    * Adding a new node means that its host name needs to conform to the trusted host names in the certificate.
-      That either means to foresee new hosts, use a wildcard certificate, or use a full CA in the first place,
-      so you can later issue more certificates if more nodes are to be added (but then you already get into the
-      territory of the next solution).
-    * If a certificate is stolen, it can only be used to connect to the cluster from a node reachable via a hostname
-      that is trusted in the certificate. It would require tampering with DNS to allow other nodes to get access to
-      the cluster (however, tampering DNS might be easier in an internal setting than on internet scale).
-* Have a CA and then keys/certificates, one for each node, and *enable*  host name checking.
-    * Basically like internet HTTPS but that you only trust the internal CA and then issue certificates for each new node.
-    * Needs a PKI, the CA certificate is trusted on all nodes, the individual certificates are used for authentication.
-    * Only the CA certificate and the key/certificate for a node is distributed.
-    * If keys/certificates are stolen, only the same node can access the cluster (unless DNS is tampered with as well).
-      You can revoke single certificates.
-
-See also a description of the settings in the @ref:[Remote Configuration](#remote-configuration-artery) section.
-
-@@@ note
-
-When using SHA1PRNG on Linux it's recommended specify `-Djava.security.egd=file:/dev/urandom` as argument
-to the JVM to prevent blocking. It is NOT as secure because it reuses the seed.
-
-@@@
-
-
-
-### Untrusted Mode
-
-As soon as an actor system can connect to another remotely, it may in principle
-send any possible message to any actor contained within that remote system. One
-example may be sending a @apidoc[akka.actor.PoisonPill] to the system guardian, shutting
-that system down. This is not always desired, and it can be disabled with the
-following setting:
-
-```
-akka.remote.artery.untrusted-mode = on
-```
-
-This disallows sending of system messages (actor life-cycle commands,
-DeathWatch, etc.) and any message extending @apidoc[akka.actor.PossiblyHarmful] to the
-system on which this flag is set. Should a client send them nonetheless they
-are dropped and logged (at DEBUG level in order to reduce the possibilities for
-a denial of service attack). `PossiblyHarmful` covers the predefined
-messages like @apidoc[akka.actor.PoisonPill] and @apidoc[akka.actor.Kill], but it can also be added
-as a marker trait to user-defined messages.
-
-@@@ warning
-
-Untrusted mode does not give full protection against attacks by itself.
-It makes it slightly harder to perform malicious or unintended actions but
-it should be noted that @ref:[Java serialization](serialization.md#java-serialization)
-should still not be enabled.
-Additional protection can be achieved when running in an untrusted network by
-network security (e.g. firewalls) and/or enabling @ref:[TLS with mutual authentication](#remote-tls).
-
-@@@
-
-Messages sent with actor selection are by default discarded in untrusted mode, but
-permission to receive actor selection messages can be granted to specific actors
-defined in configuration:
-
-```
-akka.remote.artery.trusted-selection-paths = ["/user/receptionist", "/user/namingService"]
-```
-
-
-The actual message must still not be of type `PossiblyHarmful`.
-
-In summary, the following operations are ignored by a system configured in
-untrusted mode when incoming via the remoting layer:
-
- * remote deployment (which also means no remote supervision)
- * remote DeathWatch
- * @apidoc[system.stop()](akka.actor.ActorRefFactory) {scala="#stop(actor:akka.actor.ActorRef):Unit" java="#stop(akka.actor.ActorRef)"}, @apidoc[akka.actor.PoisonPill], @apidoc[akka.actor.Kill]
- * sending any message which extends from the @apidoc[akka.actor.PossiblyHarmful] marker
-interface, which includes @apidoc[akka.actor.Terminated]
- * messages sent with actor selection, unless destination defined in `trusted-selection-paths`.
-
-@@@ note
-
-Enabling the untrusted mode does not remove the capability of the client to
-freely choose the target of its message sends, which means that messages not
-prohibited by the above rules can be sent to any actor in the remote system.
-It is good practice for a client-facing system to only contain a well-defined
-set of entry point actors, which then forward requests (possibly after
-performing validation) to another actor system containing the actual worker
-actors. If messaging between these two server-side systems is done using
-local @apidoc[akka.actor.ActorRef] (they can be exchanged safely between actor systems
-within the same JVM), you can restrict the messages on this interface by
-marking them @apidoc[akka.actor.PossiblyHarmful] so that a client cannot forge them.
-
-@@@
+as enough protection TLS with mutual authentication should be enabled. Read more about @ref:[how to enable remote security](remote-security.md).
 
 ## Quarantine
 
@@ -645,7 +466,7 @@ in case of heavy traffic by using a dedicated subchannel.
 specific events
  * Providing protocol stability across major Akka versions to support rolling updates of large-scale systems
 
-The main incompatible change from the previous implementation that the protocol field of the string representation of an
+The main incompatible change from the previous implementation is that the protocol field of the string representation of an
 @apidoc[akka.actor.ActorRef] is always *akka* instead of the previously used *akka.tcp* or *akka.ssl.tcp*. Configuration properties
 are also different.
 
@@ -864,11 +685,6 @@ akka {
 }
 ```
 
-You can look at the
-@java[@extref[Cluster with docker-compse example project](samples:akka-sample-cluster-docker-compose-java)]
-@scala[@extref[Cluster with docker-compose example project](samples:akka-sample-cluster-docker-compose-scala)]
-to see what this looks like in practice.
-
 ### Running in Docker/Kubernetes
 
 When using `aeron-udp` in a containerized environment special care must be taken that the media driver runs on a ram disk.
@@ -906,3 +722,128 @@ The flight recorder is automatically enabled by detecting JDK 11 but can be disa
 
 Low overhead Artery specific events are emitted by default when JFR is enabled, higher overhead events needs a custom settings template and are not enabled automatically with the `profiling` JFR template.
 To enable those create a copy of the `profiling` template and enable all `Akka` sub category events, for example through the JMC GUI. 
+
+## Creating Actors Remotely
+
+@@@ warning
+
+We recommend against Creating Actors Remotely, also known as remote deployment, but it is documented here
+for completeness.
+
+@@@
+
+If you want to use the creation functionality in Akka remoting you have to further amend the
+`application.conf` file in the following way (only showing deployment section):
+
+```
+akka {
+  actor {
+    deployment {
+      /sampleActor {
+        remote = "akka.tcp://sampleActorSystem@127.0.0.1:2553"
+      }
+    }
+  }
+}
+```
+
+The configuration above instructs Akka to react when an actor with path `/sampleActor` is created, i.e.
+using @scala[`system.actorOf(Props(...), "sampleActor")`]@java[`system.actorOf(new Props(...), "sampleActor")`]. This specific actor will not be directly instantiated,
+but instead the remote daemon of the remote system will be asked to create the actor,
+which in this sample corresponds to `sampleActorSystem@127.0.0.1:2553`.
+
+Once you have configured the properties above you would do the following in code:
+
+Scala
+:   @@snip [RemoteDeploymentDocSpec.scala](/akka-docs/src/test/scala/docs/remoting/RemoteDeploymentDocSpec.scala) { #sample-actor }
+
+Java
+:   @@snip [RemoteDeploymentDocTest.java](/akka-docs/src/test/java/jdocs/remoting/RemoteDeploymentDocTest.java) { #sample-actor }
+
+The actor class `SampleActor` has to be available to the runtimes using it, i.e. the classloader of the
+actor systems has to have a JAR containing the class.
+
+When using remote deployment of actors you must ensure that all parameters of the `Props` can
+be @ref:[serialized](serialization.md).
+
+@@@ note
+
+In order to ensure serializability of `Props` when passing constructor
+arguments to the actor being created, do not make the factory @scala[an]@java[a non-static] inner class:
+this will inherently capture a reference to its enclosing object, which in
+most cases is not serializable. It is best to @scala[create a factory method in the
+companion object of the actor’s class]@java[make a static
+inner class which implements `Creator<T extends Actor>`].
+
+Serializability of all Props can be tested by setting the configuration item
+`akka.actor.serialize-creators=on`. Only Props whose `deploy` has
+`LocalScope` are exempt from this check.
+
+@@@
+
+@@@ note
+
+You can use asterisks as wildcard matches for the actor path sections, so you could specify:
+`/*/sampleActor` and that would match all `sampleActor` on that level in the hierarchy.
+You can also use wildcard in the last position to match all actors at a certain level:
+`/someParent/*`. Non-wildcard matches always have higher priority to match than wildcards, so:
+`/foo/bar` is considered **more specific** than `/foo/*` and only the highest priority match is used.
+Please note that it **cannot** be used to partially match section, like this: `/foo*/bar`, `/f*o/bar` etc.
+
+@@@
+
+### Programmatic Remote Deployment
+
+@@@ warning
+
+We recommend against Creating Actors Remotely, also known as remote deployment, but it is documented here
+for completeness. This is only available for the classic Actor API.
+
+@@@
+
+To allow dynamically deployed systems, it is also possible to include
+deployment configuration in the `Props` which are used to create an
+actor: this information is the equivalent of a deployment section from the
+configuration file, and if both are given, the external configuration takes
+precedence.
+
+With these imports:
+
+Scala
+:   @@snip [RemoteDeploymentDocSpec.scala](/akka-docs/src/test/scala/docs/remoting/RemoteDeploymentDocSpec.scala) { #import }
+
+Java
+:   @@snip [RemoteDeploymentDocTest.java](/akka-docs/src/test/java/jdocs/remoting/RemoteDeploymentDocTest.java) { #import }
+
+and a remote address like this:
+
+Scala
+:   @@snip [RemoteDeploymentDocSpec.scala](/akka-docs/src/test/scala/docs/remoting/RemoteDeploymentDocSpec.scala) { #make-address }
+
+Java
+:   @@snip [RemoteDeploymentDocTest.java](/akka-docs/src/test/java/jdocs/remoting/RemoteDeploymentDocTest.java) { #make-address }
+
+you can advise the system to create a child on that remote node like so:
+
+Scala
+:   @@snip [RemoteDeploymentDocSpec.scala](/akka-docs/src/test/scala/docs/remoting/RemoteDeploymentDocSpec.scala) { #deploy }
+
+Java
+:   @@snip [RemoteDeploymentDocTest.java](/akka-docs/src/test/java/jdocs/remoting/RemoteDeploymentDocTest.java) { #deploy }
+
+### Remote deployment allow list
+
+As remote deployment can potentially be abused by both users and even attackers an allow list feature
+is available to guard the ActorSystem from deploying unexpected actors. Please note that remote deployment
+is *not* remote code loading, the Actors class to be deployed onto a remote system needs to be present on that
+remote system. This still however may pose a security risk, and one may want to restrict remote deployment to
+only a specific set of known actors by enabling the allow list feature.
+
+To enable remote deployment allow list set the `akka.remote.deployment.enable-allow-list` value to `on`.
+The list of allowed classes has to be configured on the "remote" system, in other words on the system onto which
+others will be attempting to remote deploy Actors. That system, locally, knows best which Actors it should or
+should not allow others to remote deploy onto it. The full settings section may for example look like this:
+
+@@snip [RemoteDeploymentAllowListSpec.scala](/akka-remote/src/test/scala/akka/remote/artery/RemoteDeploymentSpec.scala) { #allow-list-config }
+
+Actor classes not included in the allow list will not be allowed to be remote deployed onto this system.
